--- a/results.html
+++ b/results.html
@@ -122,7 +122,7 @@
                             </svg>
                             <img src="assets/upload.png" alt="Add Home Icon" class="add-home-icon" id="addHomeIcon">
                         </span>
-                        <p id="addHomeBtnText"><strong>Add</strong> your home to the<br> new city model!</p>
+                        <p id="addHomeBtnText" class="add-home-btn-text"><strong>Add</strong> your home to the<br> new city model!</p>
                     </button>
                 </div>
                 `;
